--- a/writing/dialogue/dialogue.html
+++ b/writing/dialogue/dialogue.html
@@ -206,7 +206,7 @@
     <div class="dialogue-sample" id="sample2">
         <h2>Parent-Teen Conflict About Grades</h2>
         <div class="dialogue">
-            <p><span class="speaker">Mother &ensp;&ensp;:</span> Suman, your math teacher called today. She said you haven't submitted the last three assignments.</p>
+            <p><span class="speaker">Mother &ensp;&ensp;:</span> Nirmala, your math teacher called today. She said you haven't submitted the last three assignments.</p>
             <p><span class="speaker">Nirmala&ensp;&ensp;:</span> I know, I know. I'll do them this weekend.</p>
             <p><span class="speaker">Mother &ensp;&ensp;:</span> This weekend? Your exams start Monday! Why do you keep procrastinating?</p>
             <p><span class="speaker">Nirmala&ensp;&ensp;:</span> It's not that simple! The new topics are really hard and when I don't understand, I just... freeze.</p>
