--- a/writing/invitation/invitation.html
+++ b/writing/invitation/invitation.html
@@ -184,6 +184,7 @@
     <div class="invitation-sample" id="sample1">
         <h2>Marriage Invitation</h2>
         <div class="invitation-content">
+            <h2>Hearty Invitation</h2>
             <p>Mr. and Mrs. Rajesh and Sunita Shrestha request the pleasure of your company at the </p>
             <p>marriage ceremony of their daughter</p>
             <p><strong>Priya</strong></p>
@@ -201,6 +202,7 @@
     <div class="invitation-sample" id="sample2">
         <h2>Birthday Invitation</h2>
         <div class="invitation-content">
+             <h2>Hearty Invitation</h2>
             <p>You're invited to celebrate</p>
             <p><strong>Anika's 8th Birthday Party!</strong></p>
             <p>Join us for an afternoon of fun, games, and cake</p>
@@ -218,6 +220,7 @@
     <div class="invitation-sample" id="sample3">
         <h2>Annual Function Invitation</h2>
         <div class="invitation-content">
+             <h2>Cordial Invitation</h2>
             <p><strong>Bright Future Academy</strong></p>
             <p>cordially invites you to our</p>
             <p><strong>15th Annual Cultural Function</strong></p>
@@ -236,12 +239,12 @@
     <div class="invitation-sample" id="sample4">
         <h2>Housewarming Invitation</h2>
         <div class="invitation-content">
-            <p>Mr. and Mrs. Binod and Anita Tamang</p>
-            <p>request the honor of your presence</p>
-            <p>at the <strong>Housewarming Ceremony</strong></p>
-            <p>of their new home</p>
-            <p>on <strong>Saturday, 10th August 2024</strong></p>
-            <p>from <strong>11:00 AM onwards</strong></p>
+             <h2>Cordial Invitation</h2>
+            <p>Mr. and Mrs. Binod and Anita Tamang request the honor of </p>
+               <p>your presence at the</p>
+              <p> <strong>Housewarming Ceremony</strong></p>
+            <p>of their new home on</p>
+            <p> <strong>Saturday, 10th August 2024</strong> from <strong>11:00 AM</strong> onwards</p>
             <p>at <strong>House No. 12, Green Valley Society, Bhaktapur</strong></p>
             <p>Lunch will be served</p>
             <div class="invitation-footer">
