--- a/writing/invitation/invitation.html
+++ b/writing/invitation/invitation.html
@@ -185,7 +185,7 @@
         <h2>Marriage Invitation</h2>
         <div class="invitation-content">
             <h2>Hearty Invitation</h2>
-            <p>Mr. and Mrs. Rajesh and Sunita Shrestha request the pleasure of your company at the </p>
+            <p>Mr. and Mrs. Rajesh Shrestha request the pleasure of your company at the </p>
             <p>marriage ceremony of their daughter</p>
             <p><strong>Priya</strong></p>
             <p>with</p>
