--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+p<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -23,6 +23,7 @@
         <li><a href="#grammar">Grammar</a></li>
         <li><a href="#writing">Writing Skills</a></li>
         <li><a href="gk/gkQuiz.html">GK Quiz</a></li>
+        <li><a href="starboard/index.html">Starboard</a></li>
         <li><a href="https://online.fliphtml5.com/vzmrl/cjqo/" target="blank">English Book IX</a></li>
          <li><a href="https://online.fliphtml5.com/vzmrl/bvpp/" target="blank">English Book X</a></li>
         <li><a href="#about">About Me</a></li>
@@ -192,4 +193,5 @@
         <p>Game developed by <strong>Nabaraj Dhungana</strong></p>
     </footer>
 </body>
+
 </html>
