--- a/starboard/index.html
+++ b/starboard/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+p<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
         <div class="text-center mb-8">
 <!-- Logo with responsive classes -->
         <div class="logo-container mb-2 w-full flex justify-center">
-            <img src="assets/logo.jpg" alt="Starboard Logo" 
+            <img src="assets/pes.jpg" alt="Starboard Logo" 
                  class="h-auto max-h-16 md:max-h-20 lg:max-h-24 w-auto max-w-[200px] md:max-w-[240px] lg:max-w-[280px]">
         </div>
             <h1 class="text-3xl font-bold text-purple-700">Starboard</h1>
@@ -64,4 +64,5 @@
     <script src="js/auth.js"></script>
     <script src="js/index.js"></script>
 </body>
+
 </html>
