--- a/starboard/index.html
+++ b/starboard/index.html
@@ -1,4 +1,4 @@
-p<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,4 +66,5 @@ p<!DOCTYPE html>
 </body>
 
 </html>
+
 
