--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
             <p>Write effective brochures to attract people.</p>
           </div>
         </a>
-        <div class="topic-card">
+        <a href="writing/letter/letter.html" class="topic-card">
           <div class="card-content">
             <i class="fas fa-envelope"></i>
             <h3>Letter Writing</h3>
             <p>From formal to personal—write letters that leave an impact.</p>
           </div>
-        </div>
+        </a>
       </div>
     </div>
   </section>
